fixed spacing issue between input and result

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body{
     flex-direction:column;
     align-items:flex-end;
     background-color:rgb(0,0,0,0.9);
+    justify-content: space-between;
 }
 
 .button_section{
